<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/idc_dfs_temp"
        android:hint="@string/idh_dfb_temp"
        android:textSize="20sp"
        android:layout_marginLeft="20sp"
        android:gravity="center"
        android:layout_marginRight="5sp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idc_dfs_date"
            android:gravity="center"
            android:hint="@string/idh_dfb_date"
            android:layout_gravity="right"
            android:layout_marginRight="30sp"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idc_dfs_short_forecast"
            android:layout_gravity="center_horizontal"
            android:hint="@string/idh_dfb_short_forecast"
            android:textSize="15sp"
            android:layout_marginRight="2sp" />
    </LinearLayout>
</LinearLayout>