<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/idc_dfb_temp"
        android:hint="@string/idh_dfb_temp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:textSize="25sp"
        android:gravity="fill"
        android:layout_marginRight="5sp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:layout_marginTop="2sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idc_dfb_date"
            android:hint="@string/idh_dfb_date"
            android:textSize="15sp"
            android:layout_gravity="right"
            android:layout_marginRight="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:id="@+id/idc_dfb_forecast_short"
            android:hint="@string/idh_dfb_short_forecast"
            android:textSize="25sp"
            android:layout_marginRight="2sp" />
    </LinearLayout>
</LinearLayout>