<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_background"
    android:padding="10dp"
    android:id="@+id/idc_wd_containter">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/idc_wd_place_name"
                android:gravity="clip_horizontal"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:hint="@string/idh_wd_place_name" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/idc_wd_text_from"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:hint="@string/idh_wd_temp_from" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/idh_wd_temp_to"
                    android:id="@+id/idc_wd_text_to"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:hint="@string/idh_wd_temp_to" />
            </LinearLayout>
        </LinearLayout>

        <ImageButton
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:id="@+id/idc_wd_btn_refresh"
            android:background="@null"
            android:src="@android:drawable/ic_menu_rotate"
            android:layout_alignParentLeft="false"
            android:layout_marginLeft="275dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:layout_alignParentStart="false"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/idc_wd_text_details"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:gravity="center"
        android:hint="@string/idh_wd_details" />
</LinearLayout>